credenciales curl orthanc orthanViewerController

--- a/.env hostiguer
+++ b/.env hostiguer
@@ -2,7 +2,7 @@ APP_NAME="APP RADIOLOGIA"
 APP_ENV=local
 APP_KEY=base64:Qjz2AEBluXORpm7VF31lXEz0dI6a+2gsWBJKSv8UadU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://147.93.47.51
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=xrex_bbdd
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD="S3gur1dad180#"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +64,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ORTHANC_USERNAME=admin
+ORTHANC_PASSWORD="S3gur1dad180#"
