funcionando con todo lo del perfil tecnologo voy a fix create update patientestudios

--- a/.envHostinguer
+++ b/.envHostinguer
@@ -2,7 +2,7 @@ APP_NAME="APP RADIOLOGIA"
 APP_ENV=local
 APP_KEY=base64:Qjz2AEBluXORpm7VF31lXEz0dI6a+2gsWBJKSv8UadU=
 APP_DEBUG=true
-APP_URL=http://147.93.47.51
+APP_URL=https://xrex.site
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
